Actions
Bug #11429
closedsulogin: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build error with NULL pointer:
sulogin.c: In function 'main': sulogin.c:293:20: error: comparison between pointer and integer [-Werror] if (cttyname[0] == NULL) ^~ cc1: all warnings being treated as errors
Updated by Toomas Soome almost 3 years ago
- Subject changed from sulogin: NULL poinnter errors to sulogin: NULL pointer errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit f1ecae5bb6568ce2aae66095708ad60af2979a39
commit f1ecae5bb6568ce2aae66095708ad60af2979a39 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-30T18:46:44.000Z 11429 sulogin: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions